# prat

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  package.json  pyproject.toml  runner.py
.github/workflows/: build-image.yml  build-setup.yml  docker-image.yml  git_action_prat.yml  python-app.yml
prat/: __init__.py  _version.py  config.py  models.py  routes.py  runtime.py
prat/templates/: base.html  dashboard.html  index.html
